src/components/OrderBook/styles.module.scss
.container {
    display: flex;
    flex-direction: column-reverse;
    justify-content: center;
    align-items: center;
    min-height: 31.25em;
    border-color: #263946;

    @media only screen and (min-width: 800px) {
        flex-direction: row;
        justify-content: center;
    }
}

.tableContainer {
    display: flex;
    width: 100%;
    flex-direction: column;
    color: #bfc1c8;
    height: 100%;

    @media only screen and (min-width: 800px) {
        width: 50%;
    }
}

